# company_simulator

./: CMakeLists.txt  README.md
include/: boss.h  employees.h  manager.h  worker.h
src/: CMakeLists.txt  main.cpp
